# mempack

./: CMakeLists.txt  README.md
include/meanbot/mempack/: extalloc.hpp  offptr_type.hpp  size_type.hpp  version.hpp
include/meanbot/mempack/detail/: bitscan.hpp  byte_alignment.hpp  checked_ops.hpp  config.hpp
include/meanbot/mempack/extallocs/: mimalloc_extalloc.hpp  rpmalloc_extalloc.hpp  stdlib_extalloc.hpp  windefheap_extalloc.hpp  winheap_extalloc.hpp  winvirt_extalloc.hpp
include/meanbot/mempack/storage/: cluster.hpp  clusters.hpp  clusters_array.hpp  config.hpp  header.hpp  segment.hpp  segments.hpp  segments_sorted_array.hpp  storage.hpp  unused_segments.hpp  unused_segments_sorted_array.hpp
include/meanbot/mempack/storage/fmt/: header.hpp  segments.hpp  segments_sorted_array.hpp  storage.hpp  unused_segments.hpp  unused_segments_sorted_array.hpp
src/: precomp.cpp  precomp.hpp
src/storage/: clusters_array.cpp  segment.cpp  segments_sorted_array.cpp  storage.cpp  unused_segments_sorted_array.cpp
tests/mempack_fuzz_tests/: CMakeLists.txt  mempack_fuzz_tests.cpp
tests/mempack_perf_tests/: CMakeLists.txt  mempack_perf_tests.cpp
tests/mempack_tests/: CMakeLists.txt  mempack_tests.cpp
tests/mempack_unit_tests/: CMakeLists.txt  mempack_unit_tests.cpp
